Build out and Style details.page - add details.html file, build in html content about, work history, projects, skills, education - add footer and fixed header - link the href on the nav to the sections using ids - style section and footer - add mobile breakpoint styles to container, section - create mixin and use list-item-padding-break in skills-list and content-list class - use font-awesone icons to represent skills icons - add media files to images - STRETCH: create a link using font awesome icons to link to projects repo - STRETCH: add google font Wendy One - update readme on progress

--- a/less/index.less
+++ b/less/index.less
@@ -32,12 +32,17 @@
   flex-direction: column;
 }
 
+.list-item-padding-break(){
+	padding: @small-spacing-size 0;
+	line-height: 1.5;
+}
+
 .home-section {
   width: 100%;
   height: 100vh;
   background-image: url('../images/bg-abstract.jpg');
-	justify-content: center;
-	.flex-center-column();
+  justify-content: center;
+  .flex-center-column();
 }
 
 .active {
@@ -46,16 +51,16 @@
 
 nav {
   position: fixed;
-	background: @shaddy-blue;
-	.flex-center-column();	
+  background: @shaddy-blue;
+  .flex-center-column();
   height: 100%;
-	width: 5%;
+  width: 5%;
   align-self: flex-start;
   justify-content: space-evenly;
 
   @media (max-width: @mobile-breakpoint) {
     width: 100%;
-    height: 10%;
+    height: 50px;
     flex-direction: row;
     bottom: 0;
   }
@@ -73,8 +78,8 @@ nav {
 
 .home-content {
   color: @pure-white;
-	width: 70%;
-	.flex-center-column();
+  width: 70%;
+  .flex-center-column();
   justify-content: center;
 
   div {
@@ -93,12 +98,12 @@ nav {
     p {
       font-size: @small-font;
       margin-bottom: @smaller-size;
-			line-height: 1.3;
-			
-			@media (max-width: @mobile-breakpoint) {
-				font-size: @smaller-size;
-				margin-bottom: 1em;
-			}
+      line-height: 1.3;
+
+      @media (max-width: @mobile-breakpoint) {
+        font-size: @smaller-size;
+        margin-bottom: 1em;
+      }
     }
 
     .home-button {
@@ -110,14 +115,14 @@ nav {
       border-radius: 5px;
       transition-duration: 0.4s;
       transition-timing-function: ease-in-out;
-			
+
       &:hover {
         background-color: @back-petal;
-			}
-			
-			@media (max-width: @mobile-breakpoint) {
-				font-size: @smaller-size;
-			}
+      }
+
+      @media (max-width: @mobile-breakpoint) {
+        font-size: @smaller-size;
+      }
 
       @keyframes blink {
         0% {
@@ -153,4 +158,120 @@ nav {
       color: @back-petal;
     }
   }
+}
+
+.main-section {
+	max-width: 100%;
+	.flex-center-column();
+	padding-top: 50px;
+  margin-bottom: 50px;
+  font-size: 2em;
+  color: @dark-gray;
+
+  .container {
+		max-width: 650px;
+
+    @media (max-width: @mobile-breakpoint) {
+			width: 100%;
+			padding: 0 @small-spacing-size;
+    }
+	}
+	
+  header {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    text-align: center;
+    padding: @small-spacing-size;
+    color: white;
+    background-color: @shaddy-blue;
+  }
+
+  h2 {
+    font-size: 2.5em;
+    padding-bottom: 5px;
+    font-weight: 500;
+  }
+
+  section {
+		padding-top: 50px;
+
+		@media (max-width: @mobile-breakpoint) {
+			padding-top: 35px;
+    }
+  }
+}
+
+.content {
+  h3 {
+    font-size: 1.2em;
+    padding: @small-spacing-size 0;
+    text-decoration: underline;
+  }
+
+  p {
+    line-height: 1.5;
+    text-align: justify;
+  }
+
+  strong {
+    font-weight: 600;
+  }
+}
+
+.skills-list {
+  display: flex;
+  flex-direction: column;
+
+  li {
+    .list-item-padding-break();
+
+    span {
+      margin-left: @small-spacing-size;
+    }
+  }
+}
+
+.project {
+  display: flex;
+	margin: 20px 0;
+	
+	.image {
+		width: 30%;
+	}
+
+  img {
+		max-width: 100%;
+	}
+
+  article {
+    width: 70%;
+    padding: 0 3%;
+
+    .inner h4 {
+      color: @dark-gray;
+      text-decoration: underline;
+
+      a {
+        padding-left: @small-spacing-size;
+      }
+    }
+  }
+}
+
+.content-list {
+  list-style: circle;
+  margin-left: 22px;
+
+  li {
+    .list-item-padding-break();
+  }
+}
+
+footer {
+	padding-top: 100px;
+  text-align: center;
+  bottom: 0;
+  font-size: 0.8em;
+  color: @dark-gray;
 }
